--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,8 @@ pluggy
 psycopg          
 psycopg-binary     
 psycopg2         
-psycopg2-binary==3.1.18
+psycopg2-binary
+
 purge            
 py               
 pycparser         
