--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,50 @@
-asgiref             
-atomicwrites       
-attrs               
-certifi            
-cffi               
-charset-normalizer  
-colorama            
-coverage           
-cryptography        
-defusedxml          
-Django            
-django-allauth     
-django-anymail      
-django-countries    
-django-crispy-forms 
-django-environ      
-gunicorn            
-idna                
-importlib-metadata  
-jsmin               
-more-itertools     
-oauthlib      
-packaging       
-pillow          
-pip             
-pluggy           
-psycopg          
-psycopg-binary     
-psycopg2  
-pip       
-psycopg2-binary
-purge            
-py               
-pycparser         
-PyJWT            
-pytest           
-pytest-cov          
-python3-openid      
-requests            
-requests-oauthlib   
-setuptools       
-six               
-sqlparse          
-stripe             
-toml              
-typed_ast         
-typing_extensions   
-tzdata             
-urllib3          
-wcwidth           
-wheel              
-zipp
+asgiref==3.7.2
+atomicwrites==1.4.1
+attrs==23.2.0
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+colorama==0.4.6
+coverage==7.4.1
+cryptography==42.0.2
+defusedxml==0.7.1
+Django==5.0.1
+django-allauth==0.60.1
+django-anymail==10.2
+django-countries==7.5.1
+django-crispy-forms==2.1
+django-environ==0.11.2
+gunicorn==21.2.0
+idna==3.6
+importlib-metadata==7.0.1
+jsmin==3.0.1
+more-itertools==10.2.0
+oauthlib==3.2.2
+packaging==23.2
+pillow==10.2.0
+pluggy==0.13.1
+psycopg==3.1.18
+psycopg-binary==3.1.18
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+purge==1.0
+py==1.11.0
+pycparser==2.21
+PyJWT==2.8.0
+pytest==4.6.0
+pytest-cov==2.12.1
+python3-openid==3.2.0
+requests==2.31.0
+requests-oauthlib==1.3.1
+setuptools==69.1.0
+six==1.16.0
+sqlparse==0.4.4
+stripe==8.3.0
+toml==0.10.2
+typed_ast==1.5.5
+typing_extensions==4.9.0
+tzdata==2023.4
+urllib3==2.2.0
+wcwidth==0.2.13
+wheel==0.42.0
+zipp==3.17.0
