--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     {
       "src": "demo/wsgi.py",
       "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.*" }
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.12.1" }
     },
     {
       "src": "build_files.sh",
