--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,14 @@ colorama==0.4.6
 coverage==7.4.1
 cryptography==42.0.2
 defusedxml==0.7.1
+dj-database-url==2.1.0
+Django==5.0.1
 django-allauth==0.60.1
 django-anymail==10.2
 django-countries==7.5.1
 django-crispy-forms==2.1
 django-environ==0.11.2
+django-heroku==0.3.1
 gunicorn==21.2.0
 idna==3.6
 importlib-metadata==7.0.1
@@ -23,7 +26,9 @@ packaging==23.2
 pillow==10.2.0
 pluggy==0.13.1
 psycopg==3.1.18
+psycopg-binary==3.1.18
 psycopg2==2.9.9
+psycopg2-binary==2.9.9
 purge==1.0
 py==1.11.0
 pycparser==2.21
@@ -44,6 +49,5 @@ tzdata==2023.4
 urllib3==2.2.0
 wcwidth==0.2.13
 wheel==0.42.0
+whitenoise==6.6.0
 zipp==3.17.0
-psycopg2-binary==2.9.9
-Django
